# CyberKey

./: .gitignore  AGENTS.md  ARCHITECTURE.md  Cargo.toml  LICENSE  PLAN.md  README.md
.github/workflows/: ci.yml
.zed/: settings.json
crates/cyberkey-cli/: Cargo.toml
crates/cyberkey-cli/src/: device.rs  display.rs  main.rs  menu.rs  protocol.rs
crates/cyberkey-core/: Cargo.toml
crates/cyberkey-core/src/: bcd.rs  config.rs  error.rs  lib.rs  totp.rs
crates/cyberkey-hid/: Cargo.toml
crates/cyberkey-hid/src/: lib.rs
crates/fingerprint2-rs/: Cargo.toml
crates/fingerprint2-rs/src/: commands.rs  driver.rs  error.rs  lib.rs  packet.rs
docs/: article.md  ble-security.md  cli-protocol.md  custom-font.md  hardware.md  storage.md  testing.md  totp.md
firmware/: Cargo.toml  build.rs  partitions.csv  sdkconfig.defaults
firmware/.cargo/: config.toml
firmware/.zed/: settings.json
firmware/src/: app.rs  ble_hid.rs  board.rs  buttons.rs  cli.rs  config_store.rs  display.rs  fingerprint.rs  hid.rs  main.rs  rtc.rs
firmware/src/fonts/: mod.rs  orbitron_font.rs  orbitron_large.rs  orbitron_mini.rs
firmware/tools/: gen_prop_font.py
tools/: cli_test.py
