[package]
name = "firmware"
version = "0.1.0"
authors = ["Thomas Simmer <thomas.simmer@hotmail.fr>"]
edition = "2021"

# Build from this directory: cargo build --release
# Flash:                      cargo run --release

[profile.dev]
opt-level = "s"

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = "fat"
opt-level = "s"
overflow-checks = false

[dependencies]
log = "0.4"
cyberkey-core = { path = "../crates/cyberkey-core" }
cyberkey-hid = { path = "../crates/cyberkey-hid" }
fingerprint2-rs = { path = "../crates/fingerprint2-rs" }
nb = "1"

# ESP-IDF runtime — includes HAL, sys bindings, FreeRTOS, NVS, etc.
# esp-idf-hal and esp-idf-sys are bundled and re-exported via esp_idf_svc::hal / ::sys.
esp-idf-svc = { version = "0.51", features = ["alloc"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# NimBLE BLE stack via ESP-IDF — provides bonding, RPA, HID profile helpers.
esp32-nimble = "0.11"

# Display — ST7789V2
mipidsi           = "0.10.0"
embedded-graphics = "0.8"
embedded-hal      = "1.0.0"

[package.metadata.espflash]
partition_table = "partitions.csv"

[build-dependencies]
# Locates the ESP-IDF toolchain and emits linker flags at build time.
embuild = { version = "0.33", features = ["espidf"] }
