[package]
name = "cyberkey-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cyberkey-cli"
path = "src/main.rs"

[dependencies]
# Interactive TUI prompts
dialoguer = "0.12"

# ASCII table rendering
tabled = "0.20"

# USB/serial communication with the firmware
serialport = "4"

# Wire protocol: newline-delimited JSON over serial
serde     = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Ergonomic error handling
anyhow = "1"

# Local timezone offset for sync_clock
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
